Regression: Snap Function treat the target object as transparent object even when X-Ray display is off #106478

Closed
opened 2023-04-03 08:17:19 +02:00 by Justin-29 · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: 3.4

Short description of error
The Snap function in Blender v3.5 always treat the target object as transparent object even when X-Ray display is off. The moving object always jumped between the front surface and back surface of the target object when Snap Function is turned on.

Exact steps for others to reproduce the error

Use provided file:

  • Move the cone over the sphere, the cone jumps between back and front side of the sphere.
    • If in 3.4 and before, the sphere will only snaps the front side of the sphere.
    • If turns on X-Ray in 3.4 and before, the snapping would look the same as this issue.

Or step by step:

  • Create an icon sphere mesh [Subdivisions=5, Radius=10m] as object A;
  • Create a cone mesh [Vertices=32, Radius 1=1m, Radius 2=0, Depth=2m] as object B
  • Turn on the Snap Function and set Snap to as [Vertex, Center, Move, Rotate].
  • Make sure viewport X-Ray is off.
  • Select object B, click G to move object B, B jumps between back and front of A.

Thank you for your time.

Kind regards,
Justin

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: 3.4 **Short description of error** The Snap function in Blender v3.5 always treat the target object as transparent object even when X-Ray display is off. The moving object always jumped between the front surface and back surface of the target object when Snap Function is turned on. **Exact steps for others to reproduce the error** Use provided file: - Move the cone over the sphere, the cone jumps between back and front side of the sphere. - If in 3.4 and before, the sphere will only snaps the front side of the sphere. - If turns on X-Ray in 3.4 and before, the snapping would look the same as this issue. Or step by step: - Create an icon sphere mesh [Subdivisions=5, Radius=10m] as object A; - Create a cone mesh [Vertices=32, Radius 1=1m, Radius 2=0, Depth=2m] as object B - Turn on the Snap Function and set Snap to as [Vertex, Center, Move, Rotate]. - Make sure viewport X-Ray is off. - Select object B, click G to move object B, B jumps between back and front of A. Thank you for your time. Kind regards, Justin
Justin-29 added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-04-03 08:17:20 +02:00
Iliya Katushenock changed title from Blender 3.5 [Snap Function] Bug to Snap Function Bug 2023-04-03 09:59:21 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-04-03 09:59:34 +02:00
Member

Can confirm the issue, I'll add that the back face culling option inside snapping menu will prevent the object from snapping to the back side of the mesh, but it's not the same effect as the X-Ray display mode.

3.4 works perfectly.

Can confirm the issue, I'll add that the back face culling option _inside snapping menu_ will prevent the object from snapping to the back side of the mesh, but it's not the same effect as the X-Ray display mode. 3.4 works perfectly.
YimingWu added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-03 10:57:03 +02:00
Iliya Katushenock removed the
Interest
Modeling
label 2023-04-03 10:57:43 +02:00
Member

Dug in a bit more, I found the cause is probably that the XRAY_ENABLED check got lost for some reason during a change in transform_snap_context_project_view3d_mixed_impl() function. I added it back, after some tests it seems to work correctly now.

I'll open a PR.

Dug in a bit more, I found the cause is probably that the `XRAY_ENABLED` check got lost for some reason during a change in `transform_snap_context_project_view3d_mixed_impl()` function. I added it back, after some tests it seems to work correctly now. I'll open a PR.
Pratik Borhade changed title from Snap Function Bug to Regression: Snap Function treat the target object as transparent object even when X-Ray display is off 2023-04-04 11:54:00 +02:00
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-04-04 11:54:07 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-04 15:41:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106478
No description provided.