Fix #106478: Missing xray check in snapping

Regression caused by 98bfa8d4589cae47d0b7ae9ff576a9acca91ab88

The `XRAY_ENABLED(v3d)` check was lost during a modification to
`transform_snap_context_project_view3d_mixed_impl` function.

This caused vertex snapping in solid shading to jump between visible
and occluded faces.

Pull Request: https://projects.blender.org/blender/blender/pulls/106495